// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render Spacer 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-1p3lwl3"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-1qo16k7"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item wp-components-flex-block css-8hxpag"
    data-g2-c16t="true"
    data-g2-component="Spacer"
  />
  <div
    class="wp-components-flex-item css-1mq9jmc"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render alignment 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-1gjqylm"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-1d3xnlc"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-1mq9jmc"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-1p3lwl3"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-1d3xnlc"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-1mq9jmc"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-1p3lwl3"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-1qo16k7"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-1mq9jmc"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;
